--- a/src/Cell.css
+++ b/src/Cell.css
@@ -1,16 +1,9 @@
 .Cell {
-  height: 15vw;
-  width: 15vw;
-  background-color: #263238;
+  height: 100px;
+  width: 100px;
   border-radius: 1px;
-  transition: all, height 0.7s ease;
-  transition-property: height, background;
-}
-
-@media screen and (min-width: 701px) {
-  .Cell {
-    height: 12vh;
-  }
+  background-color: #263238;
+  transition: background-color 0.7s ease;
 }
 
 .Cell-lit {
